--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
-    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
-    <link rel="stylesheet" href="styles/styles.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <!-- <link rel="stylesheet" href="styles/styles.min.css"> -->
     <title>Vet Clinic</title>
   </head>
   <body>
@@ -65,7 +65,7 @@
             ></a>
             <ul class="menu">
               <li class="menu__item">
-                <a class="menu__link" href="#">Главная</a>
+                <a class="menu__link" href="./index.html">Главная</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="#">О Клинике</a>
@@ -80,7 +80,7 @@
                 <a class="menu__link" href="#">FAQ</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">Контакты</a>
+                <a class="menu__link" href="./contact.html">Контакты</a>
               </li>
             </ul>
             <div class="header__paw">
