--- a/faq.html
+++ b/faq.html
@@ -90,77 +90,109 @@
         </div>
       </div>
     </header>
-    <main class="main">
-      <section class="contacts">
+    <main class="site-main">
+      <section class="faq">
         <div class="container">
-          <div class="contacts__inner">
-            <div class="contacts__wrapper">
-              <h1 class="contacts__title">Контакты</h1>
-              <p class="contacts__text">
-                Узнать информацию о наших услугах, записаться на прием к врачу
-                или проконсультироваться вы можете по телефону, в любое удобное
-                для вас время.
-              </p>
-            </div>
-            <ul class="contacts__list">
-              <li class="contacts__items">
-                г. Мариуполь, проспект Победы, 48а
-              </li>
-              <li class="contacts__items">
-                <p>Пн - Пт 8:00 - 18:00</p>
-                <p>Сб - Вс 8:00 - 14:00</p>
-              </li>
-              <li class="contacts__items">
-                <p>(067) 634 -75 - 74</p>
-                <p>(0637) 57 - 01 - 31</p>
-                <p>(098) 266 - 43 - 89</p>
-              </li>
-            </ul>
+          <div class="faq__wrapper">
+            <h1 class="faq__title">FAQ</h1>
+            <p class="faq__text">
+              Узнать информацию о наших услугах, записаться на прием к врачу или
+              проконсультироваться вы можете по телефону, в любое удобное для
+              вас время.
+            </p>
+            <a href="#" class="faq__link">Задать вопрос</a>
           </div>
         </div>
       </section>
-      <section class="location">
-        <h2 class="location__title">Как нас найти?</h2>
-        <div class="loaction__wrapper">
-          <div class="location__iframe">
-            <div
-              class="location__map"
-              style="position: relative; overflow: hidden"
-            >
-              <a
-                href="https://yandex.com/maps/10366/mariupol/?utm_medium=mapframe&utm_source=maps"
-                style="
-                  color: #eee;
-                  font-size: 12px;
-                  position: absolute;
-                  top: 0px;
-                "
-                >Mariupol</a
-              ><a
-                href="https://yandex.com/maps/10366/mariupol/house/prospekt_peremohy_48a/Z04YcANiTUEAQFptfX1xdnpjZw==/?ll=37.643371%2C47.107837&utm_medium=mapframe&utm_source=maps&z=18"
-                style="
-                  color: #eee;
-                  font-size: 12px;
-                  position: absolute;
-                  top: 14px;
-                "
-                >Prospekt Peremohy, 48А, Mariupol — Yandex Maps</a
-              ><iframe
-                src="https://yandex.com/map-widget/v1/?ll=37.643371%2C47.107837&mode=whatshere&utm_source=share&whatshere%5Bpoint%5D=37.642447%2C47.107603&whatshere%5Bzoom%5D=17&z=18"
-                width="847"
-                height="512"
-                style="position: relative; border: none"
-              ></iframe>
+      <article class="site-articles">
+        <div class="container">
+          <div class="site-articles__drop drop">
+            <div class="drop__wrapper">
+              <div class="drop__inner">
+                <p class="drop__time">01.09.2020</p>
+                <p class="drop__author">Пономаренко Наталия</p>
+              </div>
+              <details open class="drop__list">
+                <summary class="drop__title">
+                  Как часто следует проводить обработки от блох и клещей?
+                </summary>
+                <p class="drop__text">
+                  Самые качественные капли от блох и клещей как правило
+                  действуют не более одного месяца. Поэтому собак и кошек
+                  следует обрабатывать от блох именно с такой периодичностью.
+                  Обработки противопаразитарными каплями особенно актуальны для
+                  собак в период с марта по декабрь, когда активизируют свою
+                  активность клещи. Подобрать препарат от блох и клещей Вам
+                  помогут в ветеринарном комплексе “Передовой”. Также здесь Вам
+                  помогут в расчёте дозировки этих препаратов.
+                </p>
+              </details>
+            </div>
+            <div class="drop__wrapper">
+              <div class="drop__inner">
+                <p class="drop__time">01.09.2020</p>
+                <p class="drop__author">Пономаренко Наталия</p>
+              </div>
+              <details class="drop__list">
+                <summary class="drop__title">
+                  Может ли кошка или собака никогда не выходящая из дома
+                  подхватить блох?
+                </summary>
+                <p class="drop__text"></p>
+              </details>
+            </div>
+            <div class="drop__wrapper">
+              <div class="drop__inner">
+                <p class="drop__time">01.09.2020</p>
+                <p class="drop__author">Пономаренко Наталия</p>
+              </div>
+              <details class="drop__list">
+                <summary class="drop__title">
+                  Может ли кошка или собака никогда не выходящая из дома
+                  подхватить блох?
+                </summary>
+                <p class="drop__text"></p>
+              </details>
+            </div>
+            <div class="drop__wrapper">
+              <div class="drop__inner">
+                <p class="drop__time">31.08.2020</p>
+                <p class="drop__author">Пономаренко Наталия</p>
+              </div>
+              <details class="drop__list">
+                <summary class="drop__title">
+                  Чем очищать глаза собаке или кошке?
+                </summary>
+                <p class="drop__text"></p>
+              </details>
+            </div>
+            <div class="drop__wrapper">
+              <div class="drop__inner">
+                <p class="drop__time">31.08.2020</p>
+                <p class="drop__author">Пономаренко Наталия</p>
+              </div>
+              <details class="drop__list">
+                <summary class="drop__title">
+                  Чем лучше кормить – натуральным или готовым кормом?
+                </summary>
+                <p class="drop__text"></p>
+              </details>
+            </div>
+            <div class="drop__wrapper">
+              <div class="drop__inner">
+                <p class="drop__time">27.08.2020</p>
+                <p class="drop__author">Пономаренко Наталия</p>
+              </div>
+              <details class="drop__list">
+                <summary class="drop__title">
+                  Зачем нужны витамины и в каком возрасте их нужно давать?
+                </summary>
+                <p class="drop__text"></p>
+              </details>
             </div>
           </div>
-          <img
-            src="./images/address@1x.png"
-            alt="address"
-            width="593"
-            height="512"
-          />
         </div>
-      </section>
+      </article>
     </main>
     <footer class="footer">
       <div class="container">
