--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 <a class="menu__link" href="#">О Клинике</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">Наши Услуги</a>
+                <a class="menu__link" href="/services.html">Наши Услуги</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="#">Полезные Статьи</a>
