--- a/services.html
+++ b/services.html
@@ -21,17 +21,17 @@
               >г. Мариуполь, проспект Победы, 48а</a
             >
             <ul class="contact__phone">
-              <li class="contact__items">
+              <li class="contact__item">
                 <a class="contact__link" href="tel:0676347574"
                   >(067) 634 -75 - 74</a
                 >
               </li>
-              <li class="contact__items">
+              <li class="contact__item">
                 <a class="contact__link" href="tel:0637570131"
                   >(0637) 57 - 01 - 31</a
                 >
               </li>
-              <li class="contact__items">
+              <li class="contact__item">
                 <a class="contact__link" href="tel:0982664389"
                   >(098) 266 - 43 - 89</a
                 >
@@ -80,7 +80,7 @@
                 <a class="menu__link" href="faq.html">FAQ</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="contact.html">Контакты</a>
+                <a class="menu__link" href="./contact.html">Контакты</a>
               </li>
             </ul>
             <div class="header__paw">
@@ -90,109 +90,121 @@
         </div>
       </div>
     </header>
-    <main class="site-main">
-      <section class="faq">
+    <main class="main">
+      <section class="hero">
         <div class="container">
-          <div class="faq__wrapper">
-            <h1 class="faq__title">FAQ</h1>
-            <p class="faq__text">
+          <div class="hero-textbox">
+            <h1 class="hero__title">Наши услуги</h1>
+            <p class="hero__subtext">
               Узнать информацию о наших услугах, записаться на прием к врачу или
               проконсультироваться вы можете по телефону, в любое удобное для
               вас время.
             </p>
-            <a href="#" class="faq__link">Задать вопрос</a>
           </div>
         </div>
       </section>
-      <article class="site-articles">
+      <section class="card">
         <div class="container">
-          <div class="site-articles__drop drop">
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">01.09.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details open class="drop__list">
-                <summary class="drop__title">
-                  Как часто следует проводить обработки от блох и клещей?
-                </summary>
-                <p class="drop__text">
-                  Самые качественные капли от блох и клещей как правило
-                  действуют не более одного месяца. Поэтому собак и кошек
-                  следует обрабатывать от блох именно с такой периодичностью.
-                  Обработки противопаразитарными каплями особенно актуальны для
-                  собак в период с марта по декабрь, когда активизируют свою
-                  активность клещи. Подобрать препарат от блох и клещей Вам
-                  помогут в ветеринарном комплексе “Передовой”. Также здесь Вам
-                  помогут в расчёте дозировки этих препаратов.
-                </p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">01.09.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Может ли кошка или собака никогда не выходящая из дома
-                  подхватить блох?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">01.09.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Может ли кошка или собака никогда не выходящая из дома
-                  подхватить блох?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">31.08.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Чем очищать глаза собаке или кошке?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">31.08.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Чем лучше кормить – натуральным или готовым кормом?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">27.08.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Зачем нужны витамины и в каком возрасте их нужно давать?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-          </div>
+          <ul class="card__list">
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+            <li class="card__item">
+              <h2 class="card__title">Первичный осмотр</h2>
+              <p class="card__text">
+                По условиям акции в нашей клинике предоставляетса безплатная
+                услуга
+              </p>
+              <a href="#" class="btn btn-card">Узнать больше</a>
+            </li>
+          </ul>
         </div>
-      </article>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
