--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
                 "
                 >Prospekt Peremohy, 48А, Mariupol — Yandex Maps</a
               ><iframe
+                title="map"
                 src="https://yandex.com/map-widget/v1/?ll=37.643371%2C47.107837&mode=whatshere&utm_source=share&whatshere%5Bpoint%5D=37.642447%2C47.107603&whatshere%5Bzoom%5D=17&z=18"
                 width="650"
                 height="652"
