--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
                 По условиям акции в нашей клинике предоставляетса безплатная
                 услуга
               </p>
-              <a href="#" class="btn btn-card">Узнать больше</a>
+              <a href="/check-up.html" class="btn btn-card">Узнать больше</a>
             </li>
             <li class="card__item">
               <h2 class="card__title">Первичный осмотр</h2>
