--- a/about.html
+++ b/about.html
@@ -21,17 +21,17 @@
               >г. Мариуполь, проспект Победы, 48а</a
             >
             <ul class="contact__phone">
-              <li class="contact__items">
+              <li class="contact__item">
                 <a class="contact__link" href="tel:0676347574"
                   >(067) 634 -75 - 74</a
                 >
               </li>
-              <li class="contact__items">
+              <li class="contact__item">
                 <a class="contact__link" href="tel:0637570131"
                   >(0637) 57 - 01 - 31</a
                 >
               </li>
-              <li class="contact__items">
+              <li class="contact__item">
                 <a class="contact__link" href="tel:0982664389"
                   >(098) 266 - 43 - 89</a
                 >
@@ -80,7 +80,7 @@
                 <a class="menu__link" href="faq.html">FAQ</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="contact.html">Контакты</a>
+                <a class="menu__link" href="./contact.html">Контакты</a>
               </li>
             </ul>
             <div class="header__paw">
@@ -90,109 +90,75 @@
         </div>
       </div>
     </header>
-    <main class="site-main">
-      <section class="faq">
+    <main class="main">
+      <section class="about">
         <div class="container">
-          <div class="faq__wrapper">
-            <h1 class="faq__title">FAQ</h1>
-            <p class="faq__text">
-              Узнать информацию о наших услугах, записаться на прием к врачу или
-              проконсультироваться вы можете по телефону, в любое удобное для
-              вас время.
+          <div class="about__textbox">
+            <h1 class="about__title">О клинике</h1>
+            <p class="about__text">
+              Собака, кошка, попугай, шиншилла… Сколько радости и тепла приносят
+              эти весёлые друзья в наш дом.
             </p>
-            <a href="#" class="faq__link">Задать вопрос</a>
           </div>
         </div>
       </section>
-      <article class="site-articles">
-        <div class="container">
-          <div class="site-articles__drop drop">
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">01.09.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details open class="drop__list">
-                <summary class="drop__title">
-                  Как часто следует проводить обработки от блох и клещей?
-                </summary>
-                <p class="drop__text">
-                  Самые качественные капли от блох и клещей как правило
-                  действуют не более одного месяца. Поэтому собак и кошек
-                  следует обрабатывать от блох именно с такой периодичностью.
-                  Обработки противопаразитарными каплями особенно актуальны для
-                  собак в период с марта по декабрь, когда активизируют свою
-                  активность клещи. Подобрать препарат от блох и клещей Вам
-                  помогут в ветеринарном комплексе “Передовой”. Также здесь Вам
-                  помогут в расчёте дозировки этих препаратов.
-                </p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">01.09.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Может ли кошка или собака никогда не выходящая из дома
-                  подхватить блох?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">01.09.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Может ли кошка или собака никогда не выходящая из дома
-                  подхватить блох?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">31.08.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Чем очищать глаза собаке или кошке?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">31.08.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Чем лучше кормить – натуральным или готовым кормом?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
-            </div>
-            <div class="drop__wrapper">
-              <div class="drop__inner">
-                <p class="drop__time">27.08.2020</p>
-                <p class="drop__author">Пономаренко Наталия</p>
-              </div>
-              <details class="drop__list">
-                <summary class="drop__title">
-                  Зачем нужны витамины и в каком возрасте их нужно давать?
-                </summary>
-                <p class="drop__text"></p>
-              </details>
+      <section class="locations">
+        <div class="locations__wrapper">
+          <img src="/images/home.png" alt="" class="location__img" />
+          <div class="locations__inner">
+            <div class="locations__text">
+              Принимая решение о том, чтобы завести
+              <span>домашнего любимца</span>, или уже имея его, мы не должны
+              забывать, что животное это живой организм, который требует не
+              только нашей любви, а и заботы о её здоровье и внешнем виде.
+              <span>Ответственность</span> хозяина заключается в чётком
+              выполнении правил по уходу за животным, своевременного обращения к
+              врачу за консультацией и помощи в решении любого вопроса. Ведь мы
+              в ответе за тех, кого приручили!
             </div>
           </div>
         </div>
-      </article>
+        <div class="new">
+          <div class="new__wrapper">
+            <div class="new__inner">
+              <p class="new__text">
+                Ветеринарная клиника предоставляет широкий спектр услуг, начиная
+                от простых профилактических мероприятий до сложных хирургических
+                вмешательств. Мы проводим рентгенографические, ультразвуковые
+                исследования.Проводится анализ крови как общеклинический, так и
+                биохимический. Проводится общий анализ мочи с микроскопией
+                осадка.
+              </p>
+              <p class="new__text">
+                Только у нас Вы можете провести
+                <span>анализ крови кошек</span> на такие заболевания как
+                панлейкопения, кальцивироз, герпесвирусная инфекция,
+                короновироз, токсоплазмоз и хламидиоз. А также
+                <span>собак на такие заболевания</span>
+                как инфекционный гепатит, парвовирусный энтерит, чума
+                плотоядных. С полным спектром услуг можно ознакомиться здесь.
+              </p>
+            </div>
+            <img src="/images/pink-blanket.png" alt="dogs" class="new__img" />
+          </div>
+        </div>
+      </section>
+      <section class="end">
+        <div class="end__container">
+          <div class="end__textbox">
+            <h2 class="end__title">Хочешь подстричь <span>питомца?</span></h2>
+            <p class="end__text">
+              В лечебнице работает кабинет груммера, после посещения которого,
+              Ваш любимец будет особенно неотразим и привлекателен.
+            </p>
+          </div>
+          <div class="cardbox__container">
+            <img src="images/drying.png" alt="drying" class="cardbox__img" />
+            <img src="images/haircut.png" alt="drying" class="cardbox__img" />
+            <img src="images/haircut-2.png" alt="drying" class="cardbox__img" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
