--- a/contact.html
+++ b/contact.html
@@ -68,13 +68,13 @@
                 <a class="menu__link" href="./index.html">Главная</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">О Клинике</a>
+                <a class="menu__link" href="about.html">О Клинике</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="/services.html">Наши Услуги</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">Полезные Статьи</a>
+                <a class="menu__link" href="articles.html">Полезные Статьи</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="faq.html">FAQ</a>
